finishing comment service
